--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ MarkupSafe==1.1.1
 python-dotenv==0.10.3
 Werkzeug==0.16.0
 WTForms==2.2.1
+passlib==1.7.0
+SQLAlchemy==1.1.5
+gunicorn==19.0.0
+gevent==1.2.1
