--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
+bcrypt==3.1.7
+cffi==1.12.3
 Click==7.0
 django-six==1.0.4
 Flask==1.1.1
+Flask-Bcrypt==0.7.1
+Flask-Login==0.4.1
+Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
+gevent==1.2.1
+greenlet==0.4.15
+gunicorn==19.0.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+passlib==1.7.0
+pycparser==2.19
 python-dotenv==0.10.3
+six==1.12.0
+SQLAlchemy==1.1.5
 Werkzeug==0.16.0
 WTForms==2.2.1
-passlib==1.7.0
-SQLAlchemy==1.1.5
-gunicorn==19.0.0
-gevent==1.2.1
-psycopg2
-Flask-SQLAlchemy
-
